fixed the overflow of the services section, and removed unnecessary spacings for the community section

--- a/src/components/CommunitySection/styles.module.scss
+++ b/src/components/CommunitySection/styles.module.scss
@@ -3,6 +3,10 @@
 
     position: relative;
 
+    p {
+        margin: 0;
+    }
+
     &__title {
         text-align: center;
         margin-bottom: 0;
