--- a/src/components/ServicesSection/styles.module.scss
+++ b/src/components/ServicesSection/styles.module.scss
@@ -1,6 +1,7 @@
 /****** Services section *******/
 
 .servicesSection {
+  overflow-x: hidden;
 
   p,
   h1,
